# portal-services/src/main/java/com/telecominfraproject/wlan/portal/controller/webtoken/WebTokenIntrospectorController.java
@@ -7,6 +7,7 @@ import java.util.UUID;
 import org.apache.commons.codec.digest.Crypt;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.CredentialsExpiredException;
@@ -17,10 +18,13 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.telecominfraproject.wlan.core.model.role.PortalUserRole;
 import com.telecominfraproject.wlan.core.model.webtoken.IntrospectWebTokenResult;
 import com.telecominfraproject.wlan.core.model.webtoken.RefreshWebTokenRequest;
 import com.telecominfraproject.wlan.core.model.webtoken.WebTokenRequest;
 import com.telecominfraproject.wlan.core.model.webtoken.WebTokenResult;
+import com.telecominfraproject.wlan.portaluser.PortalUserServiceInterface;
+import com.telecominfraproject.wlan.portaluser.models.PortalUser;
 
 /**
  * @author dtoptygin
@@ -36,13 +40,24 @@ public class WebTokenIntrospectorController {
     private static final long accessTokenExpiryMs = Long.getLong("tip.wlan.AccessTokenExpiryMs", 3000000);
     private static final long refreshTokenExpiryMs = Long.getLong("tip.wlan.RefreshTokenExpiryMs", 3600000);
     
-    private static final long customerIdForWebToken = Long.getLong("tip.wlan.webtokenCustomerId", 2);
+    private static final int customerIdForWebToken = Integer.getInteger("tip.wlan.webtokenCustomerId", 2);
     /** For the format of the Salt @see Crypt.crypt()
     * SHA-512 salts start with {@code $6$} and are up to 16 chars long. 
     * The chars in the salt string are drawn from the set {@code [a-zA-Z0-9./]}.
     */
     private static final String saltForTheSignature = System.getProperty("tip.wlan.saltForTheSignature", "$6$V9DcGMV/");
+    
+    private static final String superUserName = System.getProperty("tip.wlan.superUserName", "support@example.com");
+    private static final String superUserPassword = System.getProperty("tip.wlan.superUserPassword", "support");
+    /** For the format of the Salt @see Crypt.crypt()
+    * SHA-512 salts start with {@code $6$} and are up to 16 chars long. 
+    * The chars in the salt string are drawn from the set {@code [a-zA-Z0-9./]}.
+    */
+    private static final String saltForThePasswords = System.getProperty("tip.wlan.saltForThePasswords", "$6$V3ZcYJP/");
+    
 
+    @Autowired
+    private PortalUserServiceInterface portalUserServiceInterface;
 
     @RequestMapping(value = "/introspecttoken", method = RequestMethod.POST, consumes=MediaType.APPLICATION_FORM_URLENCODED_VALUE)
     public IntrospectWebTokenResult introspectToken(@RequestParam Map<String, String> body){
@@ -121,21 +136,71 @@ public class WebTokenIntrospectorController {
 
     }
 
+    private static String extractUserName(String decodedToken){
+        int startPos = decodedToken.indexOf("\"userName\":\"") + "\"userName\":\"".length();
+        int endPos = decodedToken.indexOf('"',startPos+1);
+        if(endPos<0){
+            endPos = decodedToken.length();
+        }
+
+        return decodedToken.substring(startPos, endPos);
+    }
+
+    private static String extractUserRole(String decodedToken){
+        int startPos = decodedToken.indexOf("\"userRole\":\"") + "\"userRole\":\"".length();
+        int endPos = decodedToken.indexOf('"',startPos+1);
+        if(endPos<0){
+            endPos = decodedToken.length();
+        }
+
+        return decodedToken.substring(startPos, endPos);
+    }
+
+    private static boolean verifyPassword(String incomingPassword, String storedPassword) {
+        if(incomingPassword==null || incomingPassword.isEmpty()) {
+        	return false;
+        }
+
+        //verify the password
+        return (saltForThePasswords + '$' +  storedPassword).equals(Crypt.crypt(incomingPassword, saltForThePasswords)) ;
+    }
+
     @RequestMapping(value = "/token", method = RequestMethod.POST)
     public WebTokenResult token(@RequestBody WebTokenRequest body){
 
-        if(!"support@example.com".equals(body.getUserId()) || !"support".equals(body.getPassword())){
-            throw new BadCredentialsException("Unknown user or password");
-        }
+    	PortalUser portalUser = null;
+    	
+        if(superUserName.equals(body.getUserId())){
+        	 if(!superUserPassword.equals(body.getPassword())){
+        		 throw new BadCredentialsException("Unknown user or password");
+        	 }
+        	 
+        	 portalUser = new PortalUser();
+        	 portalUser.setUsername(superUserName);
+        	 portalUser.setRole(PortalUserRole.SuperUser);
+        } else {
+        	//lookup the portal user with this username
+        	portalUser = portalUserServiceInterface.getByUsernameOrNull(customerIdForWebToken, body.getUserId());
+            if(portalUser == null) {
+            	throw new BadCredentialsException("Unknown user or password");
+            }
+            
+        	//verify the password for the user
+            if(!verifyPassword(body.getPassword(), portalUser.getPassword())) {
+            	throw new BadCredentialsException("Unknown user or password");
+            }
 
+        }
+        
+        	
         WebTokenResult ret = new WebTokenResult();
         ret.setToken_type("Bearer");
         ret.setExpires_in((int) (accessTokenExpiryMs/1000));
         ret.setIdle_timeout((int) (refreshTokenExpiryMs/1000));
 
-        String accessToken = createAccessToken();
+        String accessToken = createAccessToken(portalUser);
         ret.setAccess_token(accessToken);
-        String refreshToken = createRefreshToken();
+        String refreshToken = createRefreshToken(portalUser);
         ret.setRefresh_token(refreshToken);
 
         LOG.debug("token {}", ret);
@@ -147,17 +212,44 @@ public class WebTokenIntrospectorController {
     public static void main(String[] args) {
         String uuid = UUID.randomUUID().toString();
         System.out.println("UUID="+uuid);
-        String token = createAccessToken();
+        PortalUser portalUser = new PortalUser();
+	   	portalUser.setUsername(superUserName);
+	   	portalUser.setRole(PortalUserRole.SuperUser);
+
+        String token = createAccessToken(portalUser);
 
         System.out.println(token);
         System.out.println(decodeAndVerify(token));
 
         String decodedToken = decodeAndVerify(token);
-        System.out.println(extractExpiryTime(decodedToken));
-        
-        String externalToken = "eyJpc3MiOiJ0aXAiLCJqdGkiOiI4M2ZkYWJjZS04MjhiLTQxM2UtYTEwMi1mZjlkMGNhM2U2NTciLCJleHBpcnlUaW1lIjoxNTg3NTgxNjAzNjg5LCJjdXN0b21lcklkIjoyfQ==.IPUCQtXrzL4UuAI9bgEfFvINNh0EMHVzt6B4OPmxCA1yQYTGObLpgLVbJK1/kdqgtZn3UdsAYWXoawvp6cthx.";
+        System.out.println("Expiry time: " + extractExpiryTime(decodedToken));
+
+        System.out.println("User name: " + extractUserName(decodedToken));
+        System.out.println("User role: " + extractUserRole(decodedToken));
+
+        String externalToken = "eyJpc3MiOiJ0aXAiLCJqdGkiOiIzOGQ0OTY3MS03YTQ4LTRkNDQtYWRiYS0yMzc0YzMyYjZhNDQiLCJleHBpcnlUaW1lIjoxNTg4Nzk5NjI0MDAzLCJjdXN0b21lcklkIjoyLCJ1c2VyTmFtZSI6InN1cHBvcnRAZXhhbXBsZS5jb20iLCJ1c2VyUm9sZSI6IlN1cGVyVXNlciJ9.OSpdigipiJIR2Hs/5UNQeCZNHMI1yJp/GXL3wv2YP58S0liScXU6xdeBn7idnY.zh2pawr8ZRlTAphk.jo9RS/";
         System.out.println(decodeAndVerify(externalToken));
+
+        //Now check refresh token
+        String refreshToken = createRefreshToken(portalUser);
+
+        System.out.println(refreshToken);
+        System.out.println(decodeAndVerify(refreshToken));
+
+        String decodedRefreshToken = decodeAndVerify(refreshToken);
+        System.out.println("Refresh Expiry time: " + extractExpiryTime(decodedRefreshToken));
+
+        System.out.println("Refresh User name: " + extractUserName(decodedRefreshToken));
+        System.out.println("Refresh User role: " + extractUserRole(decodedRefreshToken));
         
+        //pasword handling
+        String incomingPassword = "mypassword";
+        String saltedPassword = Crypt.crypt(incomingPassword, saltForThePasswords);
+        String pwdWithoutSalt = saltedPassword.substring(saltForThePasswords.length()+1);
+        
+        System.out.println(saltedPassword);
+        System.out.println(pwdWithoutSalt);       
+        System.out.println("Password match: " + verifyPassword(incomingPassword, pwdWithoutSalt));
     }
 
     @RequestMapping(value = "/refreshToken", method = RequestMethod.POST)
@@ -175,6 +267,12 @@ public class WebTokenIntrospectorController {
             throw new CredentialsExpiredException("Refresh token expired");
         }
 
+        String userName = extractUserName(decodedToken);
+        String userRole = extractUserRole(decodedToken);
+        PortalUser portalUser = new PortalUser();
+        portalUser.setUsername(userName);
+        portalUser.setRole(PortalUserRole.valueOf(userRole));
+        
         //create new accessToken and refreshToken
 
         WebTokenResult ret = new WebTokenResult();
@@ -182,9 +280,9 @@ public class WebTokenIntrospectorController {
         ret.setExpires_in((int) (accessTokenExpiryMs/1000));
         ret.setIdle_timeout((int) (refreshTokenExpiryMs/1000));
 
-        String accessToken = createAccessToken();
+        String accessToken = createAccessToken(portalUser);
         ret.setAccess_token(accessToken);
-        String refreshToken = createRefreshToken();
+        String refreshToken = createRefreshToken(portalUser);
         ret.setRefresh_token(refreshToken);
 
         LOG.debug("refreshToken {}", ret);
@@ -192,13 +290,23 @@ public class WebTokenIntrospectorController {
         return ret;
     }
     
-    private static String createAccessToken() {
-        String accessToken = encodeAndSign("{\"iss\":\"tip\",\"jti\":\""+UUID.randomUUID()+"\",\"expiryTime\":"+(System.currentTimeMillis() + accessTokenExpiryMs)+",\"customerId\":"+customerIdForWebToken+"}" );
+    private static String createAccessToken(PortalUser portalUser) {
+        String accessToken = encodeAndSign("{\"iss\":\"tip\",\"jti\":\""+UUID.randomUUID()
+        	+"\",\"expiryTime\":"+(System.currentTimeMillis() + accessTokenExpiryMs)
+        	+",\"customerId\":"+customerIdForWebToken
+        	+",\"userName\":\""+portalUser.getUsername()+"\""        	
+        	+",\"userRole\":\""+portalUser.getRole()+"\""        	
+        	+"}" );
         return accessToken;
     }
 
-    private static String createRefreshToken() {
-        String refreshToken = encodeAndSign("{\"iss\":\"tip\",\"jti\":\""+UUID.randomUUID()+"\",\"expiryTime\":"+(System.currentTimeMillis() + refreshTokenExpiryMs)+",\"refresh\":true}");
+    private static String createRefreshToken(PortalUser portalUser) {
+        String refreshToken = encodeAndSign("{\"iss\":\"tip\",\"jti\":\""+UUID.randomUUID()
+        	+"\",\"expiryTime\":"+(System.currentTimeMillis() + refreshTokenExpiryMs)
+        	+",\"customerId\":"+customerIdForWebToken
+        	+",\"userName\":\""+portalUser.getUsername()+"\""        	
+        	+",\"userRole\":\""+portalUser.getRole()+"\""        	
+        	+",\"refresh\":true}");
         return refreshToken;
     }
 
